--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-<script
-src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></scrip
-t>
-<script
-src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.
-js"></script>
-<script
-src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.mi
-n.js"></script>
-<script src="sketch.js"></script>
-<style> body {padding: 0; margin: 0;}
-</style>
-</head>
-<body oncontextmenu="return false;">
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
+<script src="https://unpkg.com/p5.createloop@0.2.8/dist/p5.createloop.js"></script>
+<script src="https://unpkg.com/p5.touchgui@0.5.2/lib/p5.touchgui.js"></script>
+
+  </head>
+  <body>
+    <script src="sketch.js"></script>
+    
+  </body>
 </html>
