--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
+    <script src="libraries/p5.dom.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/p5.createloop@0.2.8/dist/p5.createloop.js"></script>
+    <script src="https://unpkg.com/p5.touchgui@0.5.2/lib/p5.touchgui.js"></script>
+    <script src="sketch.js" type="text/javascript"></script>
+    
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-<script src="https://unpkg.com/p5.createloop@0.2.8/dist/p5.createloop.js"></script>
-<script src="https://unpkg.com/p5.touchgui@0.5.2/lib/p5.touchgui.js"></script>
-
   </head>
   <body>
     <script src="sketch.js"></script>
