--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="p5.experience.js"></script>
-    <script src="../src/script.js"></script>
+    <script src="src/script.js"></script>
     <link rel="stylesheet" type="text/css" href="/src/style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500" rel="stylesheet">
     
@@ -13,6 +13,6 @@
   <body>
     <main>
     </main>
-    <script src="/src/sketch.js"></script>
+    <script src="src/sketch.js"></script>
   </body>
 </html>
